# CHEAP

./: .gitignore  API.md  BENCH.md  CHEAP.md  CMakeLists.txt  README.md
benchmarks/: bench_cheap.c  bench_cheap_cpp.cpp  bench_cheap_stats.c
cmake/: FindFFTW3.cmake
examples/: fractional_diff.c  gp_regression.c  lqr_mpc.c  online_filter.c  optimal_transport.c  poisson_solver.c  toeplitz_solve.c
examples/c/: gp_regression_2d.c  ns_dissipation.c  ns_dissipation_2d.c  ns_dissipation_3d.c  poisson_solver_2d.c  poisson_solver_3d.c  rmt_denoise.c  toeplitz_solve_2d.c  wiener_denoise.c  wiener_denoise_2d.c
examples/cpp/: fractional_diff.cpp  gp_regression.cpp  gp_regression_2d.cpp  lqr_mpc.cpp  ns_dissipation.cpp  ns_dissipation_2d.cpp  ns_dissipation_3d.cpp  online_filter.cpp  optimal_transport.cpp  poisson_solver.cpp  poisson_solver_2d.cpp  poisson_solver_3d.cpp  rmt_denoise.cpp  toeplitz_solve.cpp  toeplitz_solve_2d.cpp  wiener_denoise.cpp  wiener_denoise_2d.cpp
include/: cheap.h  cheap.hpp
tests/: test_cheap.c  test_cheap_2d.c  test_cheap_3d.c  test_cheap_cpp.cpp  test_cheap_weights.c  test_simd.c
